[package]
name = "mdk_ecash_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
# MDK - from local path
mdk-core = { path = "./mdk/crates/mdk-core" }
mdk-memory-storage = { path = "./mdk/crates/mdk-memory-storage" }
nostr = "0.43"
nostr-sdk = "0.43"

# CDK - from local path
cdk = { path = "./cdk/crates/cdk" }
cdk-sqlite = { path = "./cdk/crates/cdk-sqlite" }
cashu = { path = "./cdk/crates/cashu" }

# GUI
eframe = "0.29"
egui = "0.29"

# Common dependencies
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
hex = "0.4"
