[package]
name = "mdk_ecash_web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# WASM bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window", "Storage", "console"] }

# Nostr
nostr = { version = "0.43", default-features = false, features = ["std"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"

# Error handling
anyhow = "1"

[dev-dependencies]
wasm-bindgen-test = "0.3"
